# xpertium

./: CMakeLists.txt  LICENSE  README.md  expert.hpp  expression.hpp  kb.xml  main.cpp  rule.hpp
kb/: kb_logic.xml  kb_prod.xml
lib/: dialog.hpp  expert.hpp  expression.hpp  kb.hpp  kb_parser.hpp  question.hpp  rule.hpp  term.hpp  tracer.hpp  trapeze.hpp  unknown.hpp
test/: kb.cpp  kb.hpp  main.cpp
